fix: vertically align edit button in grouped torrent card

--- a/resources/sass/pages/_torrents.scss
+++ b/resources/sass/pages/_torrents.scss
@@ -623,7 +623,6 @@ a.torrent-search--grouped__edit {
     background: initial;
     display: inline-block;
     width: 100%;
-    height: 100%;
 }
 
 .torrent-search--grouped__download a:hover,
